--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap');
 
+/* custom scroll bar css */
+body::-webkit-scrollbar 
+{
+ width: 8px;
+}
+body::-webkit-scrollbar-track 
+{
+ border-radius:10px;
+}
+body::-webkit-scrollbar-thumb
+{
+ background-color: #991c9985;
+ border-radius:10px;
+}
 
+
+
+
+
+/* other css */
 
 .navbar {
   background: linear-gradient(120deg, rgb(102, 0, 150), rgb(247, 2, 255)) !important;
@@ -37,11 +56,20 @@
   min-width: 46px !important;
 }
 .MuiBox-root.css-8atqhb{
-  width: 80% !important;
+  width: 77% !important;
   margin-left: 17%;
 }
 .table-title{
   margin-left: -120px !important
+}
+.all-job.MuiBox-root.css-8atqhb{
+  width: 100% !important;
+  margin-inline: 0px !important;
+  padding: 50px;
+}
+.all-job.MuiBox-root.css-8atqhb .table-title{
+  text-align: center !important;
+  margin-left: 7% !important;
 }
 
 
@@ -74,5 +102,8 @@
   .MuiBox-root.css-8atqhb{
     width: 100% !important;
     margin-left: 0% !important;
+  }
+  .all-job.MuiBox-root.css-8atqhb{
+    padding: 10px;
   }
 }
