--- a/client/src/App.css
+++ b/client/src/App.css
@@ -187,6 +187,13 @@ body::-webkit-scrollbar-thumb {
   background: url("./assets/images/background.jpg") !important;
   height: 100% !important;
 }
+.background-thankyou{
+  margin-top: -110px !important;
+  padding-block: 102px;
+  background-size: cover !important;
+  background: url("./assets/images/background.jpg") !important;
+  height: 850px !important;
+}
 
 .job-apply.row {
   background: url("./assets/images/job-apply.jpg");
