--- a/client/src/App.css
+++ b/client/src/App.css
@@ -258,6 +258,10 @@ body::-webkit-scrollbar-thumb {
 .detail-card {
   box-shadow: none !important;
 }
+/* #reactgooglegraph-1 div div div svg g text{
+  font-size: 30px !important;
+  fill: var(--darkblue) !important;
+} */
 
 
 /* responsive css code */
