--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,9 @@ body::-webkit-scrollbar-thumb {
   background-color: rgba(128, 128, 128, 0.3);
   border-radius: 10px;
 }
+.MuiBox-root.css-14jhzr5{
+  display: none  !important;
+}
 
 .viewer-layout-main {
   overflow-x: hidden !important;
@@ -187,14 +190,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 .background {
-  margin-top: -110px !important;
+  /* margin-top: -110px !important; */
   padding-block: 102px;
   background-size: cover !important;
   background: url("./assets/images/background.jpg") !important;
   height: 100% !important;
 }
 .background-thankyou{
-  margin-top: -110px !important;
+  /* margin-top: -110px !important; */
   padding-block: 102px;
   background-size: cover !important;
   background: url("./assets/images/background.jpg") !important;
@@ -215,12 +218,12 @@ body::-webkit-scrollbar-thumb {
 .cover {
   background: url("./assets/images/profile-cover2.jpg");
   height: 350px !important;
-  margin-top: -112px !important;
+  margin-top: -72px !important;
   background-size: cover;
 }
 
 .profile {
-  margin-top: -200px !important;
+  margin-top: -150px !important;
   box-shadow: rgba(106, 180, 253, 0.24) 0px 0px 2px 0px, rgba(77, 147, 218, 0.24) 0px 6px 20px 12px !important;
 }
 
